--- a/Simple-form-with-validation/style.css
+++ b/Simple-form-with-validation/style.css
@@ -1,3 +1,47 @@
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+p{
+    font-size: 12px;
+    color: gray;
+    font-style: italic;
+    font-weight: 300;
+    margin-bottom: 25px;
+}
+
+h3{
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+}
+
+#form{
+    border: 1px solid gray;
+    padding: 30px;
+    border-radius: 6px;
+    box-shadow: 5px 5px 15px grey;
+}
+
+input{
+    width: 90%;
+    padding: 20px;
+    border-radius: 6px;
+    border: 1px solid grey;
+}
+
+input:focus{
+    outline-color: #fff;
+    box-shadow: 1px 1px 5px 1px #219af3;
+    border-radius: 6px;
+}
+
+::placeholder{
+    font-weight: 200;
+    color: rgb(180, 180, 180);
+    font-style: italic;
+}
+
