--- a/Simple-form-with-validation/style.css
+++ b/Simple-form-with-validation/style.css
@@ -2,11 +2,9 @@ body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 p{
-    font-size: 12px;
-    color: gray;
+    font-size: 13px;
     font-style: italic;
     font-weight: 300;
-    margin-bottom: 25px;
     word-wrap: break-word;
 }
 
@@ -46,3 +44,25 @@ input:focus{
     font-style: italic;
 }
 
+input.valid{
+    border-color: rgba(32, 159, 32, 0.629);
+    border-width: 2px;
+
+}
+
+input.invalid{
+
+border-color: red;
+border-width: 2px;
+
+}
+
+input + p{
+color:red;
+opacity:0;
+}
+
+input.invalid + p{
+    opacity:1;
+    margin-bottom: 15px;
+}
